<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小眼看世界</string>
    <string name="action_settings">Settings</string>
    <string name="advertising_text">跳过广告</string>
    
    <string name="news_text">新闻</string>
    <string name="video_text">视频</string>
    <string name="topic_text">话题</string>
    <string name="user_text">我的</string>
    
    <string name="add_channel_text">添加新频道</string>
    <string name="selected_channel_text">已选频道</string>
    <string name="loading_more_news">正在加载中... ...</string>
    
    <string name="menu_share">分享</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_text_size">正文大小</string>
    <string name="menu_night_mode">日间模式</string>
    
    <string name="loading_video_fail">加载失败了，亲 ... ...</string>
    
    <string name="user_resiger">立刻登入</string>
    <string name="user_text_number">0</string>
    <string name="user_text_read">阅读</string>
     <string name="user_text_collect">收藏</string>
     <string name="user_text_comment">跟帖</string>
     
     <string name="user_text_mymessage">我的消息</string>
     <string name="user_text_message_number">0个新消息</string>
     
     <string name="user_text_night_mode">夜间模式</string>
     <string name="collect_page">我的收藏</string>
     
     <string name="sign_app_name">小眼看世界</string>
     <string name="topic_name">话题</string>
     
     <string name="topic_content_limit">话题内容不多超过40个字</string>
     <string name="sumbit_topic">发布</string>
     
     <string name="loading_more_upload">正在上传中</string>
     <string name="topic_attention">浏览</string>
     
</resources>