<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:id="@+id/ll_raido"
    android:background="?attr/mainBackgroundColor"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/ll_radio_button_news"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_iv_news"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/bottom_news_default" />

        <TextView
            android:id="@+id/bottom_tv_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/bottomTextColordefault"
            android:text="@string/news_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_radio_button_video"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_iv_video"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/bottom_video_default" />

        <TextView
            android:id="@+id/bottom_tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/bottomTextColordefault"
            android:text="@string/video_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_radio_button_topic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_iv_topic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/bottom_topic_default" />

        <TextView
            android:id="@+id/bottom_tv_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/bottomTextColordefault"
            android:text="@string/topic_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_radio_button_user"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_iv_user"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/bottom_user_default" />

        <TextView
            android:id="@+id/bottom_tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/bottomTextColordefault"
            android:text="@string/user_text" />
    </LinearLayout>

</LinearLayout>